# cup_and_ball

./: CMakeLists.txt  package.xml
launch/: ball_and_cup.launch  ball_drop.launch
urdf/: ball.urdf.xacro  chain.urdf.xacro  chain_testing.urdf.xacro  cup.urdf.xacro
