<?xml version="1.0"?>
<package>
  <name>cup_and_ball</name>
  <version>0.0.1</version>
  <description>URDF files for a cup and ball toy</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="james.smith4@mail.mcgill.ca">Alex Smith</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="repository">http://github.com/aalexsmithh/cup_and_ball</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <maintainer email="james.smith4@mail.mcgill.ca">Alex Smith</maintainer>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>xacro</build_depend>
  <run_depend>xacro</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
